# minitex

./: .coverage  .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  Raportti.md  log.html  output.xml  pyproject.toml  report.html  tasks.py
.github/workflows/: main.yml
docs/: architecture.md  manual.md  raportti.md
src/: AppLibrary.py  app.py  config.py  console_io.py  database.py  file_writer.py  index.py  reference.py  stub_io.py
src/entities/: reference.py
src/repositories/: database.py  reference_repository.py
src/services/: reference_service.py
src/tests/: login.robot  reference.robot  resource.robot  test_application.py  test_console_io.py  test_file_writer.py  test_reference.py
src/tests/repositories/: test_reference_repository.py
src/tests/services/: test_reference_service.py
src/tests/utils/: test_file_writer.py  test_validators.py
src/utils/: commands.py  file_writer.py  validators.py
