[tool.poetry]
name = "minitex"
version = "0.1.0"
description = ""
authors = ["Riku Rauhala <riku@rauhala.io>"]

[tool.poetry.dependencies]
invoke = "^1.7.3"
python = "~3.10"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
coverage = "^6.5.0"
pylint = "^2.15.6"
pytest = "^7.2.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
