[tool.poetry]
name = "minitex"
version = "0.1.0"
description = "An application for organizing references in the BibTeX format."
authors = [
    "Henri Remonen <henri.remonen@helsinki.fi>",
    "Ilari Haho <ilari.haho@helsinki.fi>",
    "Isak Pulkki <isak.pulkki@helsinki.fi>",
    "Riku Rauhala <riku.rauhala@helsinki.fi>",
    "Samppa Salo <samppa.salo@helsinki.fi>"
]

[tool.poetry.dependencies]
crossref-commons = "^0.0.7"
invoke = "^1.7.3"
python = "^3.10"
python-dotenv = "^0.21.0"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]
coverage = "^6.5.0"
pylint = "^2.15.6"
pytest = "^7.2.0"
pytest-dotenv = "^0.5.2"
robotframework = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
